[gd_scene load_steps=9 format=3 uid="uid://dkj75xabavcay"]

[ext_resource type="Script" uid="uid://dykxnhd8b55jv" path="res://scripts/main_menu.gd" id="1_l6cm7"]
[ext_resource type="Shader" uid="uid://dvo41yenbvi5f" path="res://shader/scrolling2.gdshader" id="2_bqqt6"]
[ext_resource type="Texture2D" uid="uid://7h45jwi0778f" path="res://assets/spaceBackground.png" id="3_wu84c"]
[ext_resource type="AudioStream" uid="uid://dukhlobmpsgcp" path="res://sound/MainMenu.wav" id="4_wu84c"]

[sub_resource type="Animation" id="Animation_ekxnf"]
length = 3.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.3, 1.3)]
}

[sub_resource type="Animation" id="Animation_l6cm7"]
resource_name = "new_animation"
length = 5.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.11, 1.11)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ekxnf"]
_data = {
&"RESET": SubResource("Animation_ekxnf"),
&"new_animation": SubResource("Animation_l6cm7")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ln24"]
shader = ExtResource("2_bqqt6")

[node name="MainMenu" type="Node"]
script = ExtResource("1_l6cm7")

[node name="WatchOut" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -108.0
offset_top = 51.0
offset_right = 108.0
offset_bottom = 106.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Watch Out!"

[node name="Label2" type="Label" parent="WatchOut"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 93.0
offset_top = 33.5
offset_right = 211.0
offset_bottom = 61.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.956863, 0.85098, 0.0862745, 1)
theme_override_font_sizes/font_size = 20
text = "flavour text!"

[node name="AnimationPlayer" type="AnimationPlayer" parent="WatchOut/Label2"]
libraries = {
&"": SubResource("AnimationLibrary_ekxnf")
}
autoplay = "new_animation"

[node name="Button" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -106.0
offset_right = 45.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Play"

[node name="Button2" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -45.0
offset_right = 45.0
offset_bottom = -9.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="Label" type="Label" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0
theme_override_colors/font_color = Color(0.619608, 0.619608, 0.619608, 1)
text = "made by Emperorking29"

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -200
texture_repeat = 2
material = SubResource("ShaderMaterial_8ln24")
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(3.1, 3.1)
mouse_filter = 2
texture = ExtResource("3_wu84c")

[node name="Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wu84c")
autoplay = true

[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="Button2" to="." method="_on_button_2_button_down"]
